force-app/main/default/objects/Reponse__c/Reponse__c.object-meta.xml
<CustomObject>
    <description>Objet utilisé pour stocker les réponses d&#39;un PUDO lors du démarrage d&#39;activité.</description>
    <label>Réponse</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Numéro de Réponse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>