force-app/main/default/objects/Reponse__c/fields/KO__c.field-meta.xml
<CustomField>
    <fullName>KO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KO</label>
    <type>Checkbox</type>
</CustomField>