force-app/main/default/objects/Reponse__c/fields/OK__c.field-meta.xml
<CustomField>
    <fullName>OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OK</label>
    <type>Checkbox</type>
</CustomField>