force-app/main/default/objects/Reponse__c/fields/Questionnaire_rempli__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_rempli__c</fullName>
    <label>Questionnaire rempli</label>
    <referenceTo>Questionnaire_Rempli__c</referenceTo>
    <relationshipLabel>Réponses</relationshipLabel>
    <relationshipName>Reponses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>