force-app/main/default/objects/Reponse__c/fields/Revu__c.field-meta.xml
<CustomField>
    <fullName>Revu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revu</label>
    <type>Checkbox</type>
</CustomField>