force-app/main/default/objects/Reponse__c/fields/Type_de_question__c.field-meta.xml
<CustomField>
    <fullName>Type_de_question__c</fullName>
    <label>Type de question</label>
    <length>50</length>
    <type>Text</type>
</CustomField>